# sorters

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/sorters/: __init__.py  lensort.py  sort_variable_length.py
test/: paths.py  test_lensort.py
